--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Landing Section -->
   <div class="w3-container" style="padding:100px 50px 100px 50px" id="about">
-    <h1 class="w3-center"><b>Portffolio</b></h1>
+    <h1 class="w3-center"><b>This site is currently under construction</b></h1>
     <p class="w3-center w3-large">Hello world </p>
   </div>
 
